--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "loudpack2",
+  "name": "super-galactic-age-calculator",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode development",
-    "start": "npm run build; webpack-dev-server --open --mode development",
+    "start": "webpack-dev-server --open",
     "lint": "eslint src/*.js",
     "test": "karma start karma.conf.js"
   },
@@ -18,7 +18,7 @@
     "babel-preset-es2015": "6.24.1",
     "clean-webpack-plugin": "0.1.18",
     "css-loader": "0.28.10",
-    "dotenv-webpack": "^1.6.0",
+    "dotenv-webpack": "1.6.0",
     "eslint": "4.18.2",
     "eslint-loader": "2.0.0",
     "html-webpack-plugin": "3.0.6",
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "bootstrap": "4.2.1",
+    "faker": "^4.1.0",
     "jquery": "3.3.1",
     "popper.js": "1.14.6"
   }
